# cpp_homeworks

./: .gitignore  AddressBook.cpp  AddressBook.h  Addressbook.cpp  Addressbook.h  AdressBook.cpp  AdressBook.h  AdressBook.hpp  Array.hpp  Array.tpp  Book.cpp  Book.h  CMakeLists.txt  EmpLib.cpp  EmpLib.h  Employee.cpp  Employee.h  Func.cpp  Func.h  Header.cpp  Header.h  Homework_1.cpp  Homework_1.h  Source.cpp  TestLib.cpp  TestLib.hpp  address_book.cpp  address_book.h  addressbook.cpp  addressbook.h  addressbook.hpp  adressbook.cpp  adressbook.h  algorithms.hpp  algorithms.tpp  array.cpp  array.h  array.tpp  cpp_homeworks.cpp  cpp_homeworks.h  (+15 more)
.github/workflows/: cmake.yml
AddressBookOperators/: AddressBook.cpp  AddressBook.h  AddressBookLib.cpp  AddressBookLib.h  Address_Book.cpp  Address_Book.h  Book.cpp  Book.h  Employee.cpp  Employee.h  address_book.cpp  address_book.hpp  addressbook.cpp  addressbook.h  adr_book.cpp  adr_book.hpp  employee.cpp  employee.hpp  newadressbook.cpp  newadressbook.hpp
Alghoritms/: array.cpp  array.hpp  array.tpp
MyWork/: MyArray.cpp  MyArray.hpp  MyArray.tpp  MySet.cpp  MySet.hpp  MyVector.cpp  MyVector.hpp  MyVector.tpp  algorithm.cpp  algorithm.hpp  algorithm.tpp  run  source.cpp  test.cpp
STL_Lib/: algorithms.hpp
STL_Lib/Set/: Set.hpp  Set.tpp
STL_Lib/Set/utils/: Node.hpp  Node.tpp
STL_Lib/Static_Array/: StaticArray.hpp  StaticArray.tpp
STL_Lib/Vector/: Vector.hpp  Vector.tpp
STL_Lib/utils/: PythonUtils.hpp
containers/: array.hpp  array.tpp  vector.hpp  vector.tpp
src/AddressBook/: AddressBook.cpp  AddressBook.hpp
src/AddressBook/Employee/: Employee.cpp  Employee.hpp
stdlib/: algorithms.cpp  algorithms.h  algorithms.tpp  array.h  array.tpp  vector.h  vector.tpp
stllib/: Algorithms.cpp  Algorithms.h  Algorithms.tpp  Array.cpp  Array.h  Array.tpp  BinaryTree.hpp  Source.cpp  TreeNode.hpp  Vector.cpp  Vector.h  Vector.tpp  alghoritms.tpp  algorithm.cpp  algorithm.h  algorithm.hpp  algorithm.tpp  algorithms.cpp  algorithms.h  algorithms.hpp  algorithms.tpp  array.cpp  array.h  array.hpp  array.tpp  set.cpp  set.h  set.hpp  set.tpp  stllib.vcxproj  stllib.vcxproj.filters  vector.cpp  vector.h  vector.hpp  vector.tpp
stllib/algorithms/: algorithms.h  algorithms.tpp
stllib/array/: array.h  array.tpp
stllib/set/: set.h  set.tpp
stllib/vector/: vector.cpp  vector.h  vector.hpp  vector.tpp
tests/: tests.cpp
